# ETreco

./: .gitignore  AUTHORS  ChangeLog  INSTALL_MOREINFO  Makefile.am  Makefile.in  NEWS  README  STATUS  TODO  aclocal.m4  config.h.in  configure  configure.ac  index.html  params.json
build-aux/: .gitignore
gnulib/: Makefile.am  Makefile.in  byteswap.in.h
gnulib/m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
lib/: CException.c  CException.h  CExceptionConfig.h  ETreco.h  Makefile.am  Makefile.in  ai_options.c  ai_options.h  ai_opts.c  ai_opts.h  ai_params.c  ai_params.h  ai_vfuncs.c  ai_vfuncs.h  dictionary.c  dictionary.h  et_operators.c  et_operators.h  et_params.c  et_params.h  et_vfuncs.c  et_vfuncs.h  et_vfuncs_private.h  fft.c  fft.h  fft_private.h  fwd_op_opts.c  fwd_op_opts.h  fwd_op_params.c  fwd_op_params.h  gfunc3.c  gfunc3.h  gfunc3_private.h  iniparser.c  iniparser.h  landw_opts.c  landw_opts.h  landw_params.c  landw_params.h  landweber_opts.h  (+19 more)
misc/: rec_params_template.cfg
scripts/: reconstruct  reconstruct_Balls  reconstruct_FEI4  reconstruct_FEI4_explicit
src/: .gitignore  Makefile.am  Makefile.in  ai_single_axis.c  approx_inverse.c  convex_comb.c  forward_op.c  forward_op_atonce.c  generate_tiltangles.c  landweber_single_axis.c
testsuite/: .gitignore  Makefile.am  Makefile.in  cexceptions.c  forward_op_test.c  ft_shift_test.c  gf3_test_grid.c  nfft_test.c  store_points_test.c
